--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Web Push Notification</title>
-        <link rel="stylesheet" type="text/css" href="./index.css"/>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,900;1,400&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div class="app-bar">
-            <h1>Welcome to Web Push Notifications</h1>
-        </div>
-        <div class="setup-complete">
-            <p> 🎉 Congratulations! Your setup is complete to work on the course 🎉</p>
-        </div>
-    </body>
+
+<head>
+    <title>Web Push Notification</title>
+    <link rel="stylesheet" type="text/css" href="./index.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,900;1,400&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div class="app-bar">
+        <h1>Welcome to Web Push Notifications</h1>
+    </div>
+    <div class="setup-complete">
+        <p> 🎉 Congratulations! Your setup is complete to work on the course 🎉</p>
+    </div>
+
+    <script type="text/javascript" src="client/index.js"></script>
+</body>
+
 </html>
