--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div class="setup-complete">
         <p> 🎉 Congratulations! Your setup is complete to work on the course 🎉</p>
     </div>
+    <div class="buttons-container">
+        <button id="btn-notify">SEND NOTIFICATION</button>
+    </div>
 
     <script type="text/javascript" src="client/index.js"></script>
 </body>
