05-03: Client Side subscription workflow with Push Service

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <div class="buttons-container">
         <button id="btn-notify">SEND NOTIFICATION</button>
+        <button id="btn-push">ENABLE PUSH NOTIFICATIONS</button>
     </div>
 
     <script type="text/javascript" src="client/index.js"></script>
