06-03: Show banner when client is open, notification otherwise

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button id="btn-notify">SEND NOTIFICATION</button>
         <button id="btn-push">ENABLE PUSH NOTIFICATIONS</button>
     </div>
+    <div id="push-notification"></div>
 
     <script type="text/javascript" src="client/index.js"></script>
 </body>
